# cmake-practise

./: README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
ci-task/: README.md
cmake-task/: CMakeLists.txt
cmake-task/C/: main.cpp
raspberry-task/: README.md  build-pc.sh  build-raspberry.sh  run-raspberry.sh
raspberry-task/pc/: run-pc.sh
testing-task/: README.md
